[FIX] - card align from top

--- a/src/widgets/overview-text/overview-text.scss
+++ b/src/widgets/overview-text/overview-text.scss
@@ -95,9 +95,9 @@
         }
       }
     }
-    > .row{
-        @include lg(){
-            align-items: center;
-        }
-    }
+    // > .row{
+    //     @include lg(){
+    //         align-items: center;
+    //     }
+    // }
   }
